--- a/plugins/dynamix/TerminalButton.page
+++ b/plugins/dynamix/TerminalButton.page
@@ -17,10 +17,11 @@ Code="f120"
 ?>
 <script>
 function TerminalButton() {
+  var d = new Date();
   var height = 600;
   var width = 900;
   var top = (screen.height-height)/2;
   var left = (screen.width-width)/2;
-  window.open('/webterminal/', 'Web Terminal', 'resizeable=yes,scrollbars=yes,height='+height+',width='+width+',top='+top+',left='+left).focus();
+  window.open('/webterminal/', 'Web Terminal '+d.getTime(), 'resizeable=yes,scrollbars=yes,height='+height+',width='+width+',top='+top+',left='+left).focus();
 }
 </script>
