List users alphabetically

--- a/plugins/dynamix/UserList.page
+++ b/plugins/dynamix/UserList.page
@@ -17,6 +17,7 @@ Tag="users"
 <?
 $submenu = !empty($display['users']) && substr($display['users'],0,5)!='Tasks';
 if ($submenu) $path = './Users';
+ksort($users);
 ?>
 <?foreach ($users as $user):?>
 <?$img = "/boot/config/plugins/dynamix/users/{$user['name']}.png"?>
