--- a/plugins/dynamix/DashboardApps.page
+++ b/plugins/dynamix/DashboardApps.page
@@ -142,17 +142,7 @@ foreach ($allVMs as $name) {
 
 	$contextMenus[] = sprintf("addVMContext('%s', '%s', '%s', '%s', '%s', '%s');", addslashes($name), addslashes($uuid), addslashes($template), $state, addslashes($vnc), addslashes($log));
 
-	// fallback icon for users that created VMs before metadata support was added
-	$vmicon = '/plugins/dynamix.vm.manager/templates/images/' . ($lv->domain_get_clock_offset($res) == 'localtime' ? 'windows.png' : 'linux.png');
-
-	$vmtemplateicon = $lv->_get_single_xpath_result($res, '//domain/metadata/*[local-name()=\'vmtemplate\']/@icon');
-	if (!empty($vmtemplateicon)) {
-		if (file_exists($vmtemplateicon)) {
-			$vmicon = $vmtemplateicon;
-		} elseif (file_exists("$docroot/plugins/dynamix.vm.manager/templates/images/" . $vmtemplateicon)) {
-			$vmicon = '/plugins/dynamix.vm.manager/templates/images/' . $vmtemplateicon;
-		}
-	}
+	$vmicon = $lv->domain_get_icon_url($res);
 
 	print "
 		<div class=\"Panel $status\">
