Disable array STOP button when BTRFS operation is running
With automatic re-enabling

--- a/plugins/dynamix/ArrayOperation.page
+++ b/plugins/dynamix/ArrayOperation.page
@@ -235,7 +235,7 @@ $(function(){
   case "Started":?>
     <tr><td><?status_indicator()?><span class="strong big">Started<?=(($var['startMode']=='Maintenance')?' - Maintenance Mode':'')?></span></td>
     <td><input type="button" value="Stop" onclick="stopArray(this.form)"<?if ($parity||$mover||$btrfs):?> disabled<?endif;?>></td>
-    <td><strong>Stop</strong> will take the array off-line.<?=$parity?:$mover?:$btrfs?:''?></td></tr>
+    <td id="stop"><strong>Stop</strong> will take the array off-line.<?=$parity?:$mover?:$btrfs?:''?></td></tr>
 <?  if ($var['fsNumUnmountable']>0):?>
       <tr><td><strong>Unmountable disk<?=$var['fsNumUnmountable']==1?'':'s'?> present:</strong><br>
 <?    foreach ($disks as $disk) if (strpos($disk['fsStatus'],'Unmountable')!==false)
@@ -475,6 +475,24 @@ $(function(){
 <?
 if (isset($display['sleep'])) @include $display['sleep'];
 ?>
+<?if ($btrfs):?>
+<script>
+function enable_stop() {
+  $.get('/webGui/include/ReloadPage.php',{btrfs:'btrfs'},function(data) {
+    switch (data) {
+    case 'disable':
+      setTimeout(enable_stop,5000);
+    break;
+    case 'enable':
+      var stop = $('td#stop');
+      stop.html(stop.html().replace("<?=$btrfs?>",""));
+      $('input[value="Stop"]').prop('disabled',false);
+    break;}
+  });
+}
+enable_stop();
+</script>
+<?endif;?>
 
 > **Colored Status Indicator** the significance of the color indicator of the *Array* is as follows:
 >
