vm manager: Only show VM Templates when Adding a VM; clean up vm list code; eliminate extra libvirt file require

--- a/plugins/dynamix.vm.manager/VMTemplates.page
+++ b/plugins/dynamix.vm.manager/VMTemplates.page
@@ -1,7 +1,7 @@
-Menu="VMs:2"
-Title="Templates"
+Title="Add VM"
 Tag="clipboard"
 Cond="(pgrep('libvirtd')!==false)"
+Markdown="false"
 ---
 <?PHP
 /* Copyright 2005-2017, Lime Technology
@@ -41,7 +41,11 @@ Cond="(pgrep('libvirtd')!==false)"
 		line-height: 12px;
 	}
 </style>
-<? foreach($arrAllTemplates as $strName => $arrTemplate):
+<?
+	$docroot = $docroot ?? $_SERVER['DOCUMENT_ROOT'] ?: '/usr/local/emhttp';
+	require_once "$docroot/plugins/dynamix.vm.manager/classes/libvirt_helpers.php";
+
+	foreach($arrAllTemplates as $strName => $arrTemplate):
 	if (empty($arrTemplate)) {
 		// render header
 		echo '<div class="vmheader">'.$strName.'</div>';
@@ -55,3 +59,6 @@ Cond="(pgrep('libvirtd')!==false)"
 	</a>
 </div>
 <? endforeach; ?>
+<br>
+<center><button type='button' onclick='done()'>Cancel</button></center>
+<br>
