--- a/plugins/dynamix.vm.manager/VMMachines.page
+++ b/plugins/dynamix.vm.manager/VMMachines.page
@@ -16,7 +16,7 @@ Markdown="false"
  * all copies or substantial portions of the Software.
  */
 ?>
-<link type="text/css" rel="stylesheet" href="/plugins/dynamix.vm.manager/styles/dynamix.vm.manager.css">
+<link type="text/css" rel="stylesheet" href="<?autov('/plugins/dynamix.vm.manager/styles/dynamix.vm.manager.css')?>">
 <link type="text/css" rel="stylesheet" href="/webGui/styles/jquery.filetree.css">
 <link type="text/css" rel="stylesheet" href="/webGui/styles/jquery.switchbutton.css">
 <style type="text/css">
@@ -284,7 +284,7 @@ if (empty($doms)) {
 
     echo '</tbody></table>';
 
-      /* Backup  information */
+      /* Backup information */
          /* echo "<table class='tablesorter domsnap' id='backup_table'>
                     <tr>
                     <thead>
@@ -342,10 +342,9 @@ if (empty($doms)) {
                     <td>N/A</td>
                 </tr>";
       echo '</table>';*/
+      /* End Backup information*/
 
-/* End Backup information*/
-
-      /* Snapshot  information */
+      /* Snapshot information */
       /*
           echo "<table class='tablesorter domsnap' id='domsnap_table'>
                      <thead>
@@ -407,19 +406,21 @@ if (empty($doms)) {
                 </tr>";
       echo '</tbody></table>';
       */
+      /* End Snapshot information */
+
     echo '</td></tr>';
   }
-  echo '</tbody></table>';
 }
-/* End Snapshot information */
+echo '</tbody></table>';
+
 ?>
 
 <input type="button" onclick="addVM()" id="btnAddVM" value="Add VM"/>
 
 <script src="/webGui/javascript/jquery.filetree.js"></script>
 <script src="/webGui/javascript/jquery.switchbutton.js"></script>
-<script src="/plugins/dynamix.vm.manager/scripts/dynamix.vm.manager.js"></script>
-<script src="/plugins/dynamix.vm.manager/javascript/vmmanager.js"></script>
+<script src="<?autov('/plugins/dynamix.vm.manager/scripts/dynamix.vm.manager.js')?>"></script>
+<script src="<?autov('/plugins/dynamix.vm.manager/javascript/vmmanager.js')?>"></script>
 <script>
 function vncOpen() {
   $.post('/plugins/dynamix.vm.manager/classes/vnc.php',{cmd:'open',root:'<?=$docroot?>',file:'<?=$docroot?>/plugins/dynamix.vm.manager/vncconnect.vnc'},function(data) {
